Fixed reference navigation to not overlap footer.

--- a/docsite/less/styles.less
+++ b/docsite/less/styles.less
@@ -84,6 +84,10 @@ h5 {
     top: 50px;
 }
 
+.sidebar-nav.affix-bottom {
+    position: absolute;
+}
+
 .section-start {
     margin-top: 45px;
 }
@@ -98,7 +102,7 @@ h5 {
 }
 
 .footer {
-    margin-top: 30px;
+    margin-top: 60px;
     padding-top: 20px;
     padding-bottom: 20px;
     background-color: @grey;
